--- a/src/main/pages/map/mapStylesheet.css
+++ b/src/main/pages/map/mapStylesheet.css
@@ -1,5 +1,23 @@
-#map {
-    height: 400px;
-    width: 600px
+body {
+    margin: 0;
+    padding: 0;
+}
 
+#map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+#instructions {
+    position: absolute;
+    margin: 20px;
+    width: 25%;
+    top: 0;
+    bottom: 20%;
+    padding: 20px;
+    background-color: #fff;
+    overflow-y: scroll;
+    font-family: sans-serif;
 }
