--- a/src/main/pages/map/mapStylesheet.css
+++ b/src/main/pages/map/mapStylesheet.css
@@ -21,3 +21,23 @@ body {
     overflow-y: scroll;
     font-family: sans-serif;
 }
+
+
+
+.marker {
+    background-image: url('pinMarker.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mapboxgl-popup {
+    max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
