--- a/src/main/pages/map/mapStylesheet.css
+++ b/src/main/pages/map/mapStylesheet.css
@@ -25,10 +25,10 @@ body {
 
 
 .marker {
-    background-image: url('pinMarker.png');
+    background-image: url('boat.png');
     background-size: cover;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -41,3 +41,14 @@ body {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
 }
+
+#button {
+    position: absolute;
+    margin: 20px;
+    width: 25%;
+    top: 0;
+    bottom: 20%;
+    padding: 20px;
+    background-color: #fff;
+    overflow-y: scroll;
+    font-family: sans-serif;}
