--- a/website/src/pages/points-of-interest/pointsOfInterestPage.scss
+++ b/website/src/pages/points-of-interest/pointsOfInterestPage.scss
@@ -1,35 +1,76 @@
 ul {
-    padding-left: 0.75rem;
-}
-
-details {
-    max-width: 450px;
-    overflow: hidden;
-    border-radius: 0.5rem;
-    border: 1px solid hsl(200, 6%, 20%);
+    margin: 0;
+    padding: 0;
+    list-style: none;
     margin-top: 1rem;
 
-    summary {
-        display: block;
-        cursor: pointer;
-        padding: 0.75rem;
-        font-weight: bold;
-        letter-spacing: 0.05rem;
-        text-transform: capitalize;
-        user-select: none;
+    li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid #ccc;
 
-        transition: background-color 0.2s ease-in-out;
+        button {
+            width: 100%;
+            padding: 1.5rem;
+            text-align: left;
+
+            header {
+                h1, h2, h3, h4, h5, h6 {
+                    font-size: 1.125rem;
+                    margin-bottom: 0.75rem;
+                }
+            }
+        }
+
+        &:last-child {
+            border-bottom: none;
+        }
 
         &:hover {
-            background-color: hsl(200, 6%, 15%);
+            background-color: #f5f5f5;
         }
 
-        &:focus {
-            outline: none;
+        .name {
+            flex: 1;
+            text-align: left;
         }
-    }
 
-    :not(summary) {
-        margin: 0.75rem;
+        .distance {
+            flex: 1;
+            text-align: right;
+        }
     }
 }
+
+// details {
+//     max-width: 450px;
+//     overflow: hidden;
+//     border-radius: 0.5rem;
+//     border: 1px solid hsl(200, 6%, 20%);
+//     margin-top: 1rem;
+
+//     summary {
+//         display: block;
+//         cursor: pointer;
+//         padding: 0.75rem;
+//         font-weight: bold;
+//         letter-spacing: 0.05rem;
+//         text-transform: capitalize;
+//         user-select: none;
+
+//         transition: background-color 0.2s ease-in-out;
+
+//         &:hover {
+//             background-color: hsl(200, 6%, 15%);
+//         }
+
+//         &:focus {
+//             outline: none;
+//         }
+//     }
+
+//     :not(summary) {
+//         margin: 0.75rem;
+//     }
+// }
