--- a/website/src/pages/map/mapStylesheet.css
+++ b/website/src/pages/map/mapStylesheet.css
@@ -9,23 +9,28 @@ body {
     bottom: 0;
     width: 100%;
 }
-
-#instructions {
+#estimates {
     position: absolute;
     margin: 20px;
-    width: 25%;
-    top: 0;
-    bottom: 20%;
+    width: 10%;
+    height: 80px;
     padding: 20px;
     background-color: #fff;
-    overflow-y: scroll;
     font-family: sans-serif;
 }
 
 
-
 .marker {
     background-image: url('boat.png');
+    background-size: cover;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.waypoint-marker {
+    background-image: url('pinMarker.png');
     background-size: cover;
     width: 30px;
     height: 30px;
@@ -44,10 +49,9 @@ body {
 
 #button {
     position: absolute;
-    margin: 20px;
-    width: 25%;
-    top: 0;
-    bottom: 20%;
+    left: 22px;
+    width: 10%;
+    top: 140px;
     padding: 20px;
     background-color: #fff;
     overflow-y: scroll;
