--- a/website/src/pages/points-of-interest/pointsOfInterestPage.scss
+++ b/website/src/pages/points-of-interest/pointsOfInterestPage.scss
@@ -1,24 +1,88 @@
 #root {
-    margin: 0 min(2rem, 10%);
+    margin: 0 auto;
+    padding: 2rem 1rem;
+    max-width: max(50vw, 800px);
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+.filter-container {
+    padding: 0 0.375rem;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
     gap: 1rem;
     
-    .grid-item {
-        button {
-            border: 1px solid rgba(0, 0, 0, 0.8);
-            border-radius: 0.5rem;
+    li {
+        a {
+            display: block;
+            position: relative;
+            border: 2px solid var(--color-border);
+            box-shadow: 2px 2px 10px #00000010;
             overflow: hidden;
             text-align: left;
             font-size: 1rem;
             height: 100%;
             width: 100%;
 
+            transition: all 0.15s ease-in-out;
+
+            &:hover {
+                transform: scale(1.025);
+            }
+            
+            img {
+                z-index: -1;
+                filter: blur(5px);
+                position: absolute;
+                object-fit: cover;
+                height: 100%;
+                width: 100%;
+                left: 0;
+                top: 0;
+                
+                & + section {
+                    background: linear-gradient(to right, rgb(0, 0, 0, 1), transparent);
+                    --color-captions: white;
+                    --color-text: white;
+                }
+            }
+
             section {
                 padding: 2rem;
+                color: var(--color-text);
+
+                header {
+                    margin-bottom: 1.125rem;
+                    font-family: var(--font-family-captions);
+                    color: var(--color-captions);
+
+                    h1, h2, h3, h4, h5, h6 {
+                        margin-bottom: 0;
+
+                        .shown-distance {
+                            font-size: 1rem;
+                            font-weight: normal;
+                            margin-left: 0.5rem;
+                        }
+                    }
+
+                    span {
+                        text-transform: uppercase;
+                        letter-spacing: 0.025rem;
+                        font-weight: bold;
+                        font-size: 1rem;
+                        margin-right: 0.75rem;
+                    }
+                }
+
+                p {
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
             }
         }
     }
