--- a/website/src/pages/map/mapStylesheet.css
+++ b/website/src/pages/map/mapStylesheet.css
@@ -9,6 +9,7 @@ body {
     bottom: 0;
     width: 100%;
 }
+
 #estimates {
     position: absolute;
     margin: 20px;
@@ -54,8 +55,8 @@ body {
     top: 140px;
     padding: 20px;
     background-color: #fff;
-    overflow-y: scroll;
-    font-family: sans-serif;}
+    font-family: sans-serif;
+}
 
 #clear-button {
     position: absolute;
@@ -64,5 +65,15 @@ body {
     top: 200px;
     padding: 20px;
     background-color: #fff;
-    overflow-y: scroll;
-    font-family: sans-serif;}
+    font-family: sans-serif;
+}
+
+#ferry-eta {
+    position: absolute;
+    left: 22px;
+    width: 11%;
+    top: 300px;
+    padding: 20px;
+    background-color: #fff;
+    font-family: sans-serif;
+}
