--- a/website/src/pages/map/mapPage.scss
+++ b/website/src/pages/map/mapPage.scss
@@ -1,74 +1,78 @@
-#map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+.mapboxgl-canvas-container {
+    height: 100vh;
+    width: 100vw;
 }
 
-#estimates {
-  position: absolute;
-  margin: 20px;
-  width: 10%;
-  height: 80px;
-  padding: 20px;
-  background-color: #fff;
-  font-family: sans-serif;
-}
+// #map {
+//     position: absolute;
+//     top: 0;
+//     bottom: 0;
+//     width: 100%;
+// }
 
+// #estimates {
+//     position: absolute;
+//     margin: 20px;
+//     width: 10%;
+//     height: 80px;
+//     padding: 20px;
+//     background-color: #fff;
+//     font-family: sans-serif;
+// }
 
-.marker {
-  //background-image: url('boat.png');
-  background-size: cover;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+// .marker {
+//     //background-image: url('boat.png');
+//     background-size: cover;
+//     width: 30px;
+//     height: 30px;
+//     border-radius: 50%;
+//     cursor: pointer;
+// }
 
-.waypoint-marker {
-  //background-image: url('pinMarker.png');
-  background-size: cover;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+// .waypoint-marker {
+//     //background-image: url('pinMarker.png');
+//     background-size: cover;
+//     width: 30px;
+//     height: 30px;
+//     border-radius: 50%;
+//     cursor: pointer;
+// }
 
-.mapboxgl-popup {
-  max-width: 200px;
-}
+// .mapboxgl-popup {
+//     max-width: 200px;
+// }
 
-.mapboxgl-popup-content {
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-}
+// .mapboxgl-popup-content {
+//     text-align: center;
+//     font-family: "Open Sans", sans-serif;
+// }
 
-#waypoint-button {
-  position: absolute;
-  left: 22px;
-  width: 10%;
-  top: 140px;
-  padding: 20px;
-  background-color: #fff;
-  font-family: sans-serif;
-}
+// #waypoint-button {
+//     position: absolute;
+//     left: 22px;
+//     width: 10%;
+//     top: 140px;
+//     padding: 20px;
+//     background-color: #fff;
+//     font-family: sans-serif;
+// }
 
-#clear-button {
-  position: absolute;
-  left: 22px;
-  width: 10%;
-  top: 200px;
-  padding: 20px;
-  background-color: #fff;
-  font-family: sans-serif;
-}
+// #clear-button {
+//     position: absolute;
+//     left: 22px;
+//     width: 10%;
+//     top: 200px;
+//     padding: 20px;
+//     background-color: #fff;
+//     font-family: sans-serif;
+// }
 
-#ferry-eta {
-  position: absolute;
-  left: 22px;
-  width: 11%;
-  top: 300px;
-  padding: 20px;
-  background-color: #fff;
-  font-family: sans-serif;
-}
+// #ferry-eta {
+//     position: absolute;
+//     left: 22px;
+//     width: 11%;
+//     top: 300px;
+//     padding: 20px;
+//     background-color: #fff;
+//     font-family: sans-serif;
+// }
