--- a/website/src/pages/navigationPage.scss
+++ b/website/src/pages/navigationPage.scss
@@ -1,6 +1,7 @@
 
 nav {
     display: flex;
+    align-items: center;
     flex-direction: row;
     justify-content: flex-start;
 
@@ -13,12 +14,29 @@ nav {
     height: 4rem;
 
     background-color: var(--color-surface-secondary);
+    color: var(--color-captions);
 
     .ferry-info {
+        display: flex;
+        align-items: center;
+        gap: 0.25rem;
         padding: 0.5rem;
         margin-left: auto;
-        background-color: darkseagreen;
-        color: white;
+        z-index: 20;
+
+        // background-color: darkseagreen;
+
+        svg {
+            transform: scale(0.75);
+        }
+
+        .ferry-distance {
+
+        }
+
+        .ferry-time {
+
+        }
     }
 
     #toggle-nav-menu {
@@ -26,13 +44,10 @@ nav {
         align-items: center;
         justify-content: flex-end;
         padding: 1rem;
+        color: inherit;
         z-index: 20;
 
-        // position: absolute;
-        // height: 100%;
-        // right: 0;
-
-        background-color: darkcyan;
+        // background-color: darkcyan;
     }
 
     #open-menu-icon {
@@ -58,20 +73,25 @@ nav {
     }
 
     ul {
+        top: 0;
         margin: 0;
-        padding: 0;
-        list-style: none;
+        padding: 0 0 0 1rem;
+        width: 85%;
+        height: 100vh;
         display: flex;
+        list-style: none;
         align-items: center;
         flex-direction: column;
-        gap: 0.5rem;
+        justify-content: center;
 
-        transform: translateY(-100%);
+        transform: translateX(100%);
         transition: transform 1s cubic-bezier(.86,0,.07,1);
+
+        background-color: var(--color-surface-secondary);
+        font-size: 1.5rem;
 
         position: absolute;
         right: 0;
-        left: 0;
 
         li {
             padding: 0;
@@ -80,7 +100,8 @@ nav {
             
             a {
                 width: 100%;
-                padding: 1rem;
+                padding: 0.75rem 1rem;
+                white-space: nowrap;
             }
         }
     }
@@ -93,8 +114,13 @@ nav {
         ul {
             flex-direction: row;
 
-            position: initial;
             transform: none;
+            position: initial;
+            height: initial;
+            width: initial;
+            gap: 0.5rem;
+
+            font-size: 1rem;
         }
     }
 }
