--- a/website/src/pages/navigationPage.scss
+++ b/website/src/pages/navigationPage.scss
@@ -13,6 +13,7 @@ nav {
 
     height: 4rem;
 
+    font-family: var(--font-family-captions);
     background-color: var(--color-surface-secondary);
     color: var(--color-captions);
 
