--- a/website/src/pages/routes/routesPage.scss
+++ b/website/src/pages/routes/routesPage.scss
@@ -8,16 +8,21 @@ body{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: 3rem;
 
   section {
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
+    width: 500px  ;
   }
 }
 
+.map-container {
+  padding: 2rem;
+  width: 450px;
+  height: 600px;
+}
+
 #route-container {
-  margin: 2rem;
+  margin-bottom: 2rem;
 
     li {
       padding: 1rem;
@@ -77,5 +82,8 @@ summary:before {
 details[open] > summary:before {
   transform: rotate(90deg);
 }
+ #page-container{
+   margin-top: 6rem;
+ }
 
 
