--- a/website/src/pages/map/mapPage.scss
+++ b/website/src/pages/map/mapPage.scss
@@ -3,6 +3,46 @@
     width: 100vw;
 }
 
+.bridge-status-wrapper{
+
+    height: 100px;
+    width: 350px;
+    display: flex;
+    background: white;
+    border: 2px solid var(--color-border);
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 2;
+
+    & .bridge-status-beacon{
+
+        width: 5px;
+
+        & .bridge-status-indicator{
+
+            height: 10px;
+            width: 10px;
+            background: yellow;
+            border-radius: 100px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
+
+        }
+
+    }
+
+    & .bridge-inner-text{
+
+        padding-top: 10px;
+        font-size: 0.8em;
+        display: flex;
+        flex-direction: column;
+
+    }
+}
+
 // #map {
 //     position: absolute;
 //     top: 0;
