--- a/website/src/pages/routes/routesPage.scss
+++ b/website/src/pages/routes/routesPage.scss
@@ -1,9 +1,3 @@
-body{
-  margin-left: 10rem;
-  margin-right: 10rem;
-  margin-top: 3rem;
-}
-
 #flex-container {
   display: flex;
   flex-wrap: wrap;
@@ -83,7 +77,7 @@ details[open] > summary:before {
   transform: rotate(90deg);
 }
  #page-container{
-   margin-top: 6rem;
+   margin: 6rem 14rem;
  }
 
 
